flow_apps/Flow-Based Knowledge/force-app/main/default/objects/KnowledgeTelemetry__c/KnowledgeTelemetry__c.object-meta.xml
<CustomObject>
    <label>KnowledgeTelemetry</label>
    <nameField>
        <label>KnowledgeTelemetry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KnowledgeTelemetry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>