flow_apps/Flow-Based Knowledge/force-app/main/default/objects/KnowledgeTelemetry__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ViewedArticle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>