flow_apps/Flow-Based Knowledge/force-app/main/default/objects/KnowledgeTelemetry__c/fields/Community_Site__c.field-meta.xml
<CustomField>
    <fullName>Community_Site__c</fullName>
    <label>Community Site Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>