flow_apps/Flow-Based Knowledge/force-app/main/default/objects/KnowledgeTelemetry__c/fields/Knowledge_Channel__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Channel__c</fullName>
    <label>Knowledge Channel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>