flow_apps/Flow-Based Knowledge/force-app/main/default/objects/KnowledgeTelemetry__c/fields/KnowledgeArticleVersion__c.field-meta.xml
<CustomField>
    <fullName>KnowledgeArticleVersion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Knowledge RecordId</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>KnowledgeTelemetry</relationshipLabel>
    <relationshipName>KnowledgeTelemetry</relationshipName>
    <type>Lookup</type>
</CustomField>